Podstawowa strona domowa

--- a/index.html
+++ b/index.html
@@ -7,28 +7,42 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<body style="background-color: #4c4c4c">
+<body style="background-color: #191919">
 <div class="container">
-    <div class="row" style="border-bottom: 2px solid #ffffff">
-        <h1 class="mx-auto p-3">What Do You Want</h1>
+    <div>
+        <div class="row">
+            <h1 class="mx-auto text-white m-3">What Do You Want</h1>
+        </div>
+        <div class="dropdown">
+            <a class="btn dropdown-toggle text-center m-3" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Menu
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="index.html">Zaloguj się</a>
+                <a class="dropdown-item" href="index.html">Przełącz użytkownika</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="index.html">Wyloguj się</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-1">
+            <a href="#" class="btn btn-link"><img class="img-fluid" src="http://placekitten.com/1024/1024" alt="placeholder"/></a>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-1">
+            <a href="#" class="btn btn-link"><img class="img-fluid" src="http://placekitten.com/1024/1024" alt="placeholder"/></a>
+        </div>
     </div>
     <div class="row">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-1">
-            <img class="img-fluid" src="http://placekitten.com/1024/700" alt="placeholder"/>
+            <a href="#" class="btn btn-link"><img class="img-fluid" src="http://placekitten.com/1024/1024" alt="placeholder"/></a>
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-1">
-            <img class="img-fluid" src="http://placekitten.com/1024/700" alt="placeholder"/>
+            <a href="#" class="btn btn-link"><img class="img-fluid" src="http://placekitten.com/1024/1024" alt="placeholder"/></a>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-1">
-            <img class="img-fluid" src="http://placekitten.com/1024/700" alt="placeholder"/>
-        </div>
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-1">
-            <a href="#"><img class="img-fluid" src="http://placekitten.com/1024/700" alt="placeholder"/></a>
-        </div>
-    </div>
-    <div class="row" style="border-top: 2px solid #ffffff">
+    <div class="row" style="border-top: 2px solid #888888; color: #888888">
         <h3 class="mx-auto p-2">STOPKA</h3>
     </div>
 </div>
