Podstawowa strona domowa

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -13,18 +13,15 @@
 <body class="bg-dark">
 <div class="container">
     <div class="row">
-        <div>
-            <a href="index.html"><h1 class="m-right text-white mt-3">
-                <i class="icon-shopping-basket"></i> What Do You Want</h1>
-            </a>
+        <div class="col">
+            <a href="index.html"><h1>
+                <i class="icon-shopping-basket"></i>  <span class="d-none d-lg-inline-block">What Do You Want</span>
+            </h1></a>
         </div>
-        <div>
-
-        </div>
-        <div class="col text-right">
+        <div class="col text-lg-right text-sm-center text-md-right text-center">
             <div class="dropdown">
                 <button class="btn btn-dark dropdown-toggle bg-dark m-3" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="icon-user"></i> Zaloguj się
+                    <i class="icon-user"></i> <span class="d-none d-lg-inline-block">Zaloguj się</span>
                 </button>
                 <div class="dropdown-menu bg-dark dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <form class="px-4 py-3">
@@ -39,36 +36,35 @@
                         <div class="form-check">
                             <label class="form-check-label">
                                 <input type="checkbox" class="form-check-input">
-                                Remember me
+                                Zapamiętaj mnie
                             </label>
                         </div>
                         <button type="submit" class="btn btn-secondary">Zaloguj się</button>
                     </form>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Nie masz konta? Zapisz się!</a>
+                    <a class="dropdown-item" href="#" style="color: aliceblue">Nie masz konta? Zapisz się!</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="row nav nav-pills nav-fill">
         <div class="nav-item w-25 border-left-0">
-            <a class="nav-link" href="#"><i class="icon-barcode"></i> Kod kreskowy</a>
+            <a class="nav-link" href="#"><i class="icon-barcode"></i> <span class="d-none d-lg-inline-block">Kod kreskowy</span></a>
         </div>
         <div class="nav-item w-25">
-            <a class="nav-link" href="#"><i class="icon-cart-arrow-down"></i> Pomocnik zakupowy</a>
+            <a class="nav-link" href="#"><i class="icon-cart-arrow-down"></i> <span class="d-none d-lg-inline-block">Pomocnik zakupowy</span></a>
         </div>
         <div class="nav-item w-25">
-            <a class="nav-link" href="#"><i class="icon-search"></i> Wyszukiwarka Allegro</a>
+            <a class="nav-link" href="#"><i class="icon-search"></i> <span class="d-none d-lg-inline-block">Wyszukiwarka Allegro</span></a>
         </div>
         <div class="nav-item w-25">
-            <a class="nav-link" href="#"><i class="icon-tags"></i> Kategorie Allegro</a>
+            <a class="nav-link" href="#"><i class="icon-tags"></i> <span class="d-none d-lg-inline-block">Kategorie Allegro</span></a>
         </div>
     </div>
     <div>
         <div class="row mt-3 pl-2 pr-2 pt-3 border border-secondary">
             <h3>Witamy w aplikacji What Do You Want</h3>
-            Aplikacja została stworzona na potrzeby projektu grupowego, w ramach kursu Junior Java Developer.<br/><br/>
-
+            Aplikacja została stworzona na potrzeby projektu grupowego, w ramach kursu Junior Java Developer.<br/>
             Co możesz zrobić za pomocą naszej aplikacji:
             <ul>
                 <li>Rozpoznasz produkt po kodzie kreskowym</li>
@@ -78,7 +74,7 @@
             </ul>
         </div>
         <div class="row m-0">
-            <h7 class="mx-auto p-2">&#169 infoShare Academy</h7>
+            <span class="mx-auto p-2">&#169 infoShare Academy</span>
         </div>
     </div>
 </div>
