--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -21,17 +23,17 @@
         <div class="col text-lg-right text-sm-center text-md-right text-center">
             <div class="dropdown">
                 <button class="btn btn-dark dropdown-toggle bg-dark m-3" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="icon-user"></i> <span class="d-none d-lg-inline-block">Zaloguj się</span>
+                    <i class="icon-user"></i> <span class="d-none d-lg-inline-block">Panel administatora</span>
                 </button>
                 <div class="dropdown-menu bg-dark dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <form class="px-4 py-3">
+                    <form class="px-4 py-3" method="post" action="login">
                         <div class="form-group">
-                            <label for="exampleDropdownFormEmail1">Adres e-mail</label>
-                            <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="your@email.com">
+                            <label for="exampleDropdownFormEmail1">Login</label>
+                            <input type="text" class="form-control" id="exampleDropdownFormEmail1" name="login" placeholder="login">
                         </div>
                         <div class="form-group">
                             <label for="exampleDropdownFormPassword1">Hasło</label>
-                            <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+                            <input type="password" class="form-control" id="exampleDropdownFormPassword1" name="password" placeholder="Password">
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
