--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -49,7 +49,8 @@
     </div>
     <div class="row nav nav-pills nav-fill">
         <div class="nav-item w-25 border-left-0">
-            <a class="nav-link" href="#"><i class="icon-barcode"></i> <span class="d-none d-lg-inline-block">Kod kreskowy</span></a>
+            <a class="nav-link" href="file-upload.jsp"><i class="icon-barcode"></i> <span
+                    class="d-none d-lg-inline-block">Kod kreskowy</span></a>
         </div>
         <div class="nav-item w-25">
             <a class="nav-link" href="#"><i class="icon-cart-arrow-down"></i> <span class="d-none d-lg-inline-block">Pomocnik zakupowy</span></a>
